<resources>
    <string name="app_name">Shop Locator</string>

    <string name="drawer_shops">Shops</string>
    <string name="drawer_owners">Owners</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_tools">Tools</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="fragment_create_shop_toolbar_title">Create Shop</string>
    <string name="fragment_create_shop_save">Save</string>
    <string name="fragment_create_shop_changes">Save changes</string>
    <string name="fragment_create_shop_image_url">Image URL</string>
    <string name="fragment_create_shop_title">Shop Title</string>
    <string name="fragment_create_shop_coord">Shop Coordinates (format: 50[.272408], 28[50555.647304])</string>
    <string name="fragment_create_shop_owner">Shop Owner</string>
    <string name="fragment_create_shop_image_url_error">Image URL must be filled!</string>
    <string name="fragment_create_shop_title_error">Shop Title must be filled!</string>
    <string name="fragment_create_shop_coord_error">Shop Coordinates must be filled and match format!</string>
    <string name="fragment_create_shop_owner_error">Shop Owner must be filled and exist!</string>
    <string name="fragment_create_shop_error_message">All fields must be filled!</string>

    <string name="menu_shops_list_create_shop">Add new</string>

    <string name="shops_list_dialog_ok_button">Create Owner</string>
    <string name="shops_list_dialog_title">Warning!</string>
    <string name="shops_list_dialog_message">You can\'t create shops if you don\'t have owners.</string>

    <string name="fragment_create_owner_toolbar_title">Create Owner</string>
    <string name="fragment_create_owner_save">Save</string>
    <string name="fragment_create_owner_changes">Save changes</string>
    <string name="fragment_create_owner_image_url">Image URL</string>
    <string name="fragment_create_owner_name">Owner Name</string>
    <string name="fragment_create_owner_image_url_error">Image URL must be filled!</string>
    <string name="fragment_create_owner_name_error">Owner Name must be filled!</string>
    <string name="fragment_create_owner_error_message">All fields must be filled!</string>
    <string name="fragment_create_owner_shops_list_title">Owner shops</string>

    <string name="menu_owners_list_create_shop">Add new</string>
    <string name="activity_owners_list_empty_owner">This owner doesn\'t have its shops.</string>

    <string name="owners_list_holder_has_shop">Owner has one or more shops and can\'t be deleted.</string>
    <string name="owners_list_holder_no_network">Owner can be deleted only when server connection is established.</string>

    <string name="shops_list_holder_no_network">Shop can be deleted only when server connection is established.</string>

    <string name="base_list_empty_text">The list is empty!</string>
    <string name="base_list_create_new_shop">Create new</string>
    <string name="base_list_delete_dialog_title">Do you really want to delete this item?</string>

    <string name="menu_base_list_create_shop">Add new</string>

    <string name="fragment_owners_list_toolbar_title">Owners</string>

    <string name="fragment_shops_list_toolbar_title">Shops</string>

    <string name="fragment_map_toolbar_title">Map</string>

    <string name="activity_splashing_skip_button">Skip</string>
    <plurals name="activity_splashing_time_left">
        <item quantity="one">%1$d second left</item>
        <item quantity="other">%1$d seconds left</item>
    </plurals>

    <string name="activity_settings_splashing_delay">Splashing screen delay</string>
    <string name="activity_settings_splashing_enable">Enable splashing screen</string>
    <string name="activity_settings_splashing">Splashing screen</string>
    <string name="activity_settings_base">Backup database by mail</string>
    <string name="activity_settings_mail_subject">Backup database by mail</string>
    <string name="activity_settings_mail_body">Database backup</string>
    <string name="activity_settings_mail_chooser_title">Send E-Mail</string>
    <string name="activity_settings_mail_error">Sorry, but we can\'t send Database by mail. Check App permission please.</string>
</resources>
