<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_create_owner_image"
        android:layout_width="@dimen/fragment_create_owner_image_width"
        android:layout_height="@dimen/fragment_create_owner_image_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/fragment_create_owner_image_padding"
        tools:src="@drawable/shop_icon"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_create_owner_image_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fragment_create_owner_image"
        android:layout_marginLeft="@dimen/fragment_create_owner_margin_horizontal"
        android:layout_marginRight="@dimen/fragment_create_owner_margin_horizontal">

        <EditText
            android:id="@+id/fragment_create_owner_image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_create_owner_image_url"
            android:inputType="textUri"
            android:textSize="@dimen/fragment_create_owner_text_size"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_create_owner_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fragment_create_owner_image_url_layout"
        android:layout_marginLeft="@dimen/fragment_create_owner_margin_horizontal"
        android:layout_marginRight="@dimen/fragment_create_owner_margin_horizontal">

        <EditText
            android:id="@+id/fragment_create_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_create_owner_name"
            android:inputType="text"
            android:textSize="@dimen/fragment_create_owner_text_size"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_create_owner_save"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fragment_create_owner_name_layout"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/fragment_create_owner_name_layout"
        android:text="@string/fragment_create_owner_save"/>

</RelativeLayout>